{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Enemy",
            "id": "0b31ff42-a50d-4744-845e-b3af98fdc0e0",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "59a86384-1766-40e2-a8d1-7e8b5bc15748",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Walk",
                    "type": "Value",
                    "id": "307ae3cc-d479-4218-9628-498486ce9e2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "31ce584c-1d5b-4ab0-b1c3-d3258526c507",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveCamera",
                    "type": "Value",
                    "id": "6895882a-3893-457c-911a-8e9b220eb78b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec069d87-044f-4106-9f2c-4f5d7d51ed49",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36dfd7e1-d313-4302-91c0-a0ca775929db",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb12c9d4-b294-4f05-b595-98ab71df0459",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Walk",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "688a94f4-ae51-4cba-9c3b-af70bb522ce2",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}